--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Find a Recipe</title>
 </head>
-<body>
-  <section class="container">
-    <div>
 
+<body>
+
+  <main>
+    <div class="container py-4">
+      <header class="pb-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">          
+          <img class="icon m-2" src="assets/salt_icon.svg" alt="Find a Recipe">          
+          <span class="fs-4">Find a recipe</span>
+        </a>
+      </header>
+
+      <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+          <h1>Find a recipe</h1>
+          <p class="col-md-8 fs-4">Type ingredients and find out recipes that use them.</p>
+          <input id="search" class="form-control" type="text" placeholder="ingredients..." onkeypress="search" />
+        </div>
+      </div>
+
+      <!-- section that will receive the search results -->
+      <section id="recipes" class="row">
+      </section>
+
+      <footer class="pt-3 mt-4 text-muted border-top">
+        Mario Sousa © 2022
+      </footer>
     </div>
-    <h1>Find a recipe</h1>
-    <input id="search" class="form-control" type="text" placeholder="ingredients..." onkeypress="search"/>
-    
-  </section>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="js/api.js"></script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
