--- a/ingredient.html
+++ b/ingredient.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css">
-    <title>Find a Recipe</title>
+    <title>Ingredient</title>
   </head>
 <body>
   <main>
@@ -20,8 +20,8 @@
       </header>
     </div>
 
-    <!-- section that will receive the recipe data -->
-    <article id="recipe" class="container">
+    <!-- section that will receive the ingredient data -->
+    <article id="ingredient" class="container">
     </article>
 
     <footer class="pt-3 mt-4 text-muted border-top">
@@ -36,7 +36,6 @@
   <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script>
-    // TODO move this to a another file. Duplicated code.
     // runs after loading the document. It will fetch the recipe by the id param
     document.addEventListener("DOMContentLoaded", function() {
       //https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
@@ -44,7 +43,7 @@
         get: (searchParams, prop) => searchParams.get(prop),
       });
       
-      fetchRecipe(params.id);
+      fetchIngredientById(params.id);
     });
   </script>
 </body>
