--- a/ingredient.html
+++ b/ingredient.html
@@ -32,17 +32,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+  <script src="js/util.js"></script>
   <script src="js/config.js"></script>
   <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script>
-    // runs after loading the document. It will fetch the recipe by the id param
-    document.addEventListener("DOMContentLoaded", function() {
-      //https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
-      const params = new Proxy(new URLSearchParams(window.location.search), {
-        get: (searchParams, prop) => searchParams.get(prop),
-      });
-      
+    // runs after loading the document. It will fetch the ingredient by the id param
+    onLoad( params => {
       fetchIngredientById(params.id);
     });
   </script>
