Add css animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <div class="container py-4">
       <header class="pb-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none slidein">
           <img class="icon m-2" src="assets/salt_icon.svg" alt="Find a Recipe">
           <span class="fs-4">Find a recipe</span>
         </a>
