Add image and nutrition data to ingredient page

--- a/ingredient.html
+++ b/ingredient.html
@@ -39,7 +39,7 @@
   <script>
     // runs after loading the document. It will fetch the ingredient by the id param
     onLoad( params => {
-      fetchIngredientById(params.id);
+      fetchIngredientById(params.id, params.amount);
     });
   </script>
 </body>
