--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+
+  <!--app scripts-->
   <script src="js/config.js"></script>
   <script src="js/api.js"></script>
   <script src="js/main.js"></script>
@@ -52,7 +54,6 @@
     input.addEventListener("keypress", function (event) {
       //when enter is pressed a new search will be made.
       if (event.key === "Enter") {
-
         searchByIngredients(event.target.value).then(
           response => buildSearchResult(response)
         );
