--- a/recipes.html
+++ b/recipes.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/style.css">
-    <title>Find a Recipe</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Find a Recipe</title>
+</head>
+
 <body>
   <main>
     <div class="container py-4">
       <header class="pb-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">          
-          <img class="icon m-2" src="assets/salt_icon.svg" alt="Find a Recipe">          
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+          <img class="icon m-2" src="assets/salt_icon.svg" alt="Find a Recipe">
           <span class="fs-4">Find a recipe</span>
         </a>
       </header>
@@ -32,15 +34,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+  
+  <!--app scripts-->
   <script src="js/util.js"></script>
   <script src="js/config.js"></script>
   <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script>
     // runs after loading the document. It will fetch the recipe by the id param
-    onLoad( params => {
-      fetchRecipe(params.id);
-    });
+    onLoad(params => fetchRecipe(params.id));
   </script>
 </body>
+
 </html>
